added the api and a description added the anime quotes api above the task list also added a description for the task the user is doing

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="quotes">
+
+  </div>
   <div class="app">
     <div class="header">
       <h1>To-Do</h1>
-      <div class="theme-toggle">
-        <span class="sun-icon">☀️</span>
-        <span class="moon-icon">🌙</span>
-      </div>
+      
     </div>
     <div class="todo-container">
       <ul id="todo-list"></ul>
       <div class="input-group">
         <input type="text" id="todo-input" placeholder="Add a task..." />
+        <input type="text" id="todo-desc" placeholder="Description (optional)"/>
         <button id="add-btn">
           <span class="plus-icon">+</span>
           <span class="add-text">Add Task</span>
@@ -28,6 +29,15 @@
     <div class="stats">
       <span id="total-tasks">0</span> tasks total •
       <span id="completed-tasks">0</span> completed
+    </div>
+  </div>
+  
+
+  <div class="modal">
+    <div class="modal-content">
+      <h2 class="modal-title">Task Description</h2>
+      <p id="task-description"> </p>
+      <button id="close-modal">Close</button>
     </div>
   </div>
 
