added dark mode

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <div class="app">
     <div class="header">
       <h1>To-Do</h1>
-      
+      <div class="theme-buttons">
+        <button class="theme-toggle">Toggle Theme</button>
+      </div>
     </div>
     <div class="todo-container">
       <ul id="todo-list"></ul>
@@ -30,6 +32,15 @@
       <span id="total-tasks">0</span> tasks total •
       <span id="completed-tasks">0</span> completed
     </div>
+    <div>
+      <button class="display-btn">View Tasks</button>
+    </div>
+  </div>
+
+  <div>
+    <ul id="task-list">
+
+    </ul>
   </div>
   
 
